# sandbox-cv

./: CMakeLists.txt  LICENSE  README.md
include/: histogram.hpp  include.hpp
src/: histogram.cpp  mostrar_imagen.cpp
